--- a/package.json
+++ b/package.json
@@ -13,13 +13,10 @@
     "bcrypt": "^5.1.0",
     "mongoose": "^7.1.0",
     "next": "13.4.10",
-    "next-auth": "^4.22.1",
+    "next-auth": "4.22.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2"
-  },
-  "devDependencies": {
-    "@netlify/plugin-nextjs": "^4.39.3"
   }
 }
